# lift-sys

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AICI_INTEGRATION_PLAN.md  AUTHENTICATION.md  BEST_OF_N_ANALYSIS.md  CLAUDE.md  CONJECTURING_BEADS_SUMMARY.md  CONJECTURING_IMPLEMENTATION_PLAN.md  CONJECTURING_INDEX.md  CONJECTURING_QUICK_START.md  CONJECTURING_RESEARCH_REPORT.md  DEVELOPMENT_PLAN.md  EQUIVALENCE_CHECKER_SUMMARY.md  GET_CONNECTION_STRING.md  HONEYCOMB_BEADS_SUMMARY.md  HONEYCOMB_PLANNING_COMPLETE.md  HONEYCOMB_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  IR_DESIGN.md  IR_EFFECTS_FIX.md  IR_INTERPRETER_CALIBRATION_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  LICENSE.md  LIFT-SYS-260-COMPLETE.md  LIFT_SYS_59_COMPLETE.md  OPTION_C_EXECUTION_PLAN.md  P0_FIXES_RESULTS.md  PARAPHRASE_GENERATOR_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_PROMPT_ENHANCEMENT_REPORT.md  PHASE3_1_RESULTS.md  PHASE3_COMPLETE_SUMMARY.md  PHASE3_PLANNING.md  PHASE_2_ASSESSMENT.md  PHASE_2_COMPLETE_80_PERCENT.md  PHASE_2_WITH_IR_EFFECTS.md  (+60 more)
.beads/: issues.jsonl  lift-sys.db  lift-sys.db-shm  lift-sys.db-wal
.claude/: testing-protocol.md
.github/: secret_scanning.yml
benchmark_results/: benchmark_results_20251015_084654.json  benchmark_results_20251015_084840.json  benchmark_results_20251015_084907.json  benchmark_results_20251015_084922.json  benchmark_results_20251015_085128.json  benchmark_results_20251015_090641.json  benchmark_results_20251017_174621.json  benchmark_results_20251018_162403.json  benchmark_results_20251018_170418.json  benchmark_results_20251018_172147.json  benchmark_results_20251018_195836.json  benchmark_results_20251018_200544.json  benchmark_results_20251022_192808.json  benchmark_results_20251022_192934.json  benchmark_results_parallel_20251018_103624_946128.json  benchmark_results_parallel_20251018_103725_504598.json  execution_validation_20251015_092345.json  execution_validation_20251015_092446.json  execution_validation_20251015_092651.json  nontrivial_phase2_20251015_110956.json  nontrivial_phase2_20251015_112023.json  nontrivial_phase2_20251015_113225.json  nontrivial_phase2_20251015_113753.json  nontrivial_phase2_20251015_115605.json  nontrivial_phase2_20251015_124316.json  nontrivial_phase2_20251015_134100.json  nontrivial_phase2_20251015_142251.json  nontrivial_phase2_20251015_165123.json  nontrivial_phase2_20251015_180123.json  nontrivial_phase2_20251015_191139.json  nontrivial_phase2_20251015_191901.json  nontrivial_phase2_20251016_031709.json  nontrivial_phase2_20251016_064715.json  nontrivial_phase2_20251016_082558.json  nontrivial_phase2_20251016_083454.json  nontrivial_phase2_20251017_141318.json  nontrivial_phase2_20251017_141329.json  nontrivial_phase2_20251017_152704.json  nontrivial_phase2_20251017_163051.json  nontrivial_phase2_20251017_163102.json  (+4 more)
debug/: README.md  analyze_conjecturing_bottleneck.py  analyze_ir_interpreter_impact.py  check_get_type_name_ir.py  collect_failure_samples.py  create_mock_diagnostics.py  debug_assertion_checker.py  debug_assertion_simple.py  debug_code_attempt_1.py  debug_code_attempt_2.py  debug_code_attempt_3.py  debug_count_words_syntax.py  debug_failed_code_attempt_2.py  debug_impl_attempt_1.json  debug_impl_attempt_3.json  debug_letter_grade_diagnostic.py  debug_max_of_two_code.py  debug_max_of_two_ir.json  diagnose_3_failures.py  diagnose_count_words.py  diagnose_failing_tests.py  diagnose_failures.py  diagnose_indentation.py  dowhy_exploration.py  ir_variant_examples_20251022.py  performance_benchmark.py  quick_category_test.py  run_2x_validation.py  run_execution_validation.py  run_expanded_benchmark.py  run_nontrivial_tests.py  run_phase1_with_warmup.py  run_phase2_claude_ir.py  run_phase2_with_multishot.py  run_phase3_best_of_n.py  run_phase3_with_validation.py  run_stability_test.py  show_generated_code.py  strategic_sample_test.py  test_3_failures_with_fixed_constraints.py  (+33 more)
design/: ARCHITECTURE_PROMPT_TO_IR.md  ARTIFACT_INVENTORY.md
development_records/: CODEBASE_REVIEW.md  COMPREHENSIVE_TEST_REPORT.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  NEXT_PHASE_PLAN.md  README.md  SPRINT_0_SUMMARY.md  TEST_FIXES_SUMMARY.md  TEST_ISOLATION_FIXES.md
docs/: ACE_IMPLEMENTATION_PROPOSAL.md  ACE_RESEARCH_ANALYSIS.md  ACTION_PLAN_3_FAILURES.md  ALL_RESEARCH_BEADS_SUMMARY.md  API_SESSION_MANAGEMENT.md  AST_GREP_INTEGRATION_PLAN.md  BEST_PRACTICES.md  CALLIGRAPHER_ASSESSMENT.md  CONJECTURING_TECHNICAL_SPEC.md  CONSTRAINED_GENERATION_ASSESSMENT.md  CONSTRAINT_PROPAGATION_TYPED_HOLES.md  CONSTRAINT_REFERENCE.md  CORE_LOOP_COMPLETION_PLAN.md  COT_BEST_OF_N_HYBRID_PLAN.md  DESIGN_SYSTEM_IMPROVEMENT_PLAN.md  FAQ.md  FINE_TUNING_SYNTHETIC_DATA_PLAN.md  FULL_UX_SUITE_APPROVED.md  GITHUB_SEMANTIC_ANALYSIS.md  INDEX.md  INTEGRATION_ROADMAP.md  IR_SPECIFICATION.md  IR_TO_CODE_ARCHITECTURE.md  LSP_INTEGRATION_DESIGN.md  MAKING_TESTS_FASTER.md  MASTER_PLAN.md  MASTER_ROADMAP.md  MODAL_DEPLOYMENT_GUIDE.md  MODAL_ENDPOINTS.md  MODAL_INFERENCE_SUMMARY.md  MODAL_PERFORMANCE_OPTIMIZATIONS.md  MODAL_REFERENCE.md  MODAL_WORKING_CONFIG.md  MULTI_LANGUAGE_STRATEGY.md  MUSLR_ENHANCEMENT_EXAMPLES.md  MUSLR_IMPLEMENTATION_PROPOSAL.md  MUSLR_RESEARCH_ANALYSIS.md  PERFORMANCE.md  PHASE_5_COMPLETION_SUMMARY.md  PHASE_5_IR_INTERPRETER_DESIGN.md  (+39 more)
examples/: session_workflow.py
experiments/: README.md  debug_lsp_symbols.py  poc2_semantic_quality.py  poc_xgrammar_ir.py  test_lsp_real_symbols.py  test_typescript_lsp.py  validate_code_generation_e2e.py  validate_lsp_quality.py  validate_xgrammar_e2e.py
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
lift_sys/: __init__.py  main.py  modal_app.py
migrations/: 001_create_sessions_table.sql  002_create_revisions_table.sql  003_create_drafts_table.sql  004_create_resolutions_table.sql  005_create_rls_policies.sql  006_create_triggers.sql  007_create_views.sql  008_create_graph_states_table.sql  010_fix_security_linter_issues.sql  (+2 more)
(+847 files in other folders)
